fixing vertical alignment

--- a/app/components/uri/URIDisplayDialog.scss
+++ b/app/components/uri/URIDisplayDialog.scss
@@ -9,7 +9,7 @@
 
     .CopyableAddress_copyIconBig {
       & > svg {
-        margin-top: -9px;
+        margin-top: -7px;
       }
     }
   }
